# geotiff

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  lint.yml  test.yml
benches/: README.md  read_geotiff.rs
resources/: austrian_capitals_model_tie_point_and_pixel_scale_pixel_is_area.tif  austrian_capitals_model_tie_point_and_pixel_scale_pixel_is_point.tif  austrian_capitals_model_tie_points_pixel_is_area.tif  austrian_capitals_model_tie_points_pixel_is_point.tif  austrian_capitals_model_transformation_pixel_is_area.tif  austrian_capitals_model_transformation_pixel_is_point.tif  mapzen-geotiff-14-10348-7801.tif  s1a-iw3-slc-vv-20151022t122546-20151022t122549-008265-00ba51-001.tif  zh_dem_25.tif
src/: coordinate_transform.rs  decoder_ext.rs  geo_key_directory.rs  geotiff.rs  image_data.rs  lib.rs  lowlevel.rs  raster_data.rs  reader.rs  tiff.rs
src/coordinate_transform/: affine_transform.rs  tie_point_and_pixel_scale.rs  tie_points.rs
tests/: integration.rs  transform.rs
tests/common/: mod.rs
