[package]
name = "geotiff"
description = "A GeoTIFF library for Rust"
version = "0.0.2"
edition = "2021"
authors = [
    "Dominik Bucher <dobucher@ethz.ch>",
    "Gunnar Schulze <gunnar.schulze@gmail.com>"
]
repository = "https://github.com/georust/geotiff"

[dependencies]
delaunator = { version = "1.0", optional = true }
geo-index = { version = "0.1", optional = true }
geo-types = { version = "0.7" }
num_enum = "0.7"
num-traits = "0.2"
tiff = "0.9"

[dev-dependencies]
criterion = "0.5.1"
proj = "0.27"

[features]
tie-points = ["dep:delaunator", "dep:geo-index"]

[[bench]]
name = "read_geotiff"
harness = false