[package]
name = "geotiff"
description = "A GeoTIFF library for Rust"
version = "0.1.0"
edition = "2021"
authors = [
    "Dominik Bucher <dobucher@ethz.ch>",
    "Gunnar Schulze <gunnar.schulze@gmail.com>",
    "Wei Ji Leong <weiji@developmentseed.org>",
]
repository = "https://github.com/georust/geotiff"
license = "MIT"
readme = "README.md"
rust-version = "1.70"

[dependencies]
delaunator = { version = "1.0", optional = true }
geo-index = { version = "0.1", optional = true }
geo-types = { version = "0.7" }
num_enum = "0.7"
num-traits = "0.2"
tiff = "0.9"

[dev-dependencies]
proj = "0.27"

[features]
tie-points = ["dep:delaunator", "dep:geo-index"]
